<resources>
    <string name="app_name">Tic-Tac-Toe</string>

    <string name="homeTile">Tic Tac Toe</string>
    <string name="playButton">Play</string>

    <string name="PlayerSetupTitle">Enter Your Name</string>
    <string name="Label1"> Player1</string>
    <string name="Label2">Player2</string>
    <string name="submitButton">Submit Names</string>
    <string name="NameHint">Enter Your Name</string>

    <string name="playAgainButton">Play Again</string>
    <string name ="StatisticsButton">Statistics</string>
    <string name="homeButton">Home</string>

    <string name="ResetButton">Reset</string>
    <string name="MenuButton">Menu</string>
</resources>